--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY WORK</title>
     <link rel="stylesheet" href="./style.css">
+    <title>MY WORK</title>
 </head>
 <body>
     <div class="login-box">
     <h1>LOGIN</h1>
     <div class="textbox" >   
-        <input type="username" placeholder="username " name="" value="" >
+        <input type="username" placeholder="username ">
     </div>
-
     <div class="textbox">
-        <input type="password" placeholder="password" name="" value="">
+        <input type="password" placeholder="password">
     </div>
-
     <input class="btn" type="button" name="" value="sign in">
-
-    
-    
 </body>
 </html>
